src/static/skins/colibris/src/components/toolbar.css
.toolbar {
  border-bottom: none;
  padding: 0;
  background-color: #ffffff;
  background-color: var(--bg-color);
  color: #576273;
  color: var(--text-soft-color);
  border-bottom: none;
}

#editbar.editor-scrolled {
  border-bottom: 1px solid #d2d2d2;
  border-bottom: var(--toolbar-border);
}

.toolbar ul {
  align-items: center;
}

.toolbar ul.menu_left {
  padding-left: 5px;
}

.toolbar ul li {
  margin: 7px 1px;
}

.toolbar ul li a, .toolbar .buttonicon {
  color: inherit;
}

.toolbar .buttonicon {
  background-color: transparent;
  font-size: 15px;
}
.buttonicon-insertorderedlist:before,
.buttonicon-insertunorderedlist:before,
.buttonicon-indent:before,
.buttonicon-outdent:before {
  font-size: 16px !important;
}

.toolbar ul li.separator {
  visibility: hidden;
  width: 1px;
  margin: 0 10px;
  position: relative;
}

.toolbar.condensed ul li {
  margin-left: 0;
}

.toolbar.condensed ul li.separator {
  margin: 0 5px;
}

.toolbar ul li a {
  background-color: transparent;
  background: none;
  border: none;
  border-radius: 3px !important;
  transition: background-color .1s;
}

.toolbar ul li a:hover, .toolbar ul li select:hover  {
  background-color: #f2f3f4;
  background-color: var(--bg-soft-color);
  color: #485365;
  color: var(--text-color);
}
.toolbar ul li a.selected {
  background-color: #f2f3f4;
  background-color: var(--bg-soft-color);
}
.toolbar ul li a.pressed,
.toolbar ul li select:active {
  color: #64d29b;
  color: var(--primary-color);
}

.toolbar ul li select:active option {
  background-color: #ffffff;
  background-color: var(--bg-color);
  color: #576273;
  color: var(--text-soft-color);
  padding: 5px;
}

.toolbar .menu_right li a.selected {
  background-color: #576273;
  background-color: var(--text-soft-color);
  color: #ffffff;
  color: var(--bg-color);
}

.toolbar ul li[data-key=showusers] {
  margin: 0;
  margin-left: 15px;
  width: 45px;
  height: 100%;
}
.toolbar ul li[data-key=showusers] > a {
  width: 100%;
  height: 100%;
  border-radius: 0 !important;
}

.toolbar .menu_right .separator {
  display: none;
}
.toolbar .menu_right li {
  margin-left: 10px;
}

.toolbar.cropped .menu_left {
  height: 39px;
  padding-top: 1px;
}
.toolbar .show-more-icon-btn {
  font-size: 1.8rem;
  color: #64d29b;
  color: var(--primary-color);
}

@media (max-width: 1000px) {
  .toolbar ul li.separator {
    margin: 0 5px;
    background: none;
    display: block;
  }
}

.mobile-layout .toolbar ul li {
  margin: 5px 2px;
}
.mobile-layout .toolbar ul li.separator {
  margin: 0 5px;
}
@media (max-width: 800px) {
  .mobile-layout .toolbar ul li.separator {
    display: none;
  }
}
.mobile-layout .toolbar .menu_right {
  border-top: 1px solid #d2d2d2;
  border-top: var(--toolbar-border);
  background-color: #ffffff;
  background-color: var(--bg-color);
  padding: 0;
}
.mobile-layout .toolbar ul li a:hover {
  /* background-color: transparent; */
}

